# ssg-product

./: .flake8  .gitignore  gunicorn.conf.py  logging.yaml  makefile  pyproject.toml  wsgi.py
.github/: issue-branch.yml
.github/ISSUE_TEMPLATE/: epic.md
.github/workflows/: python-app.yml
app/: __init__.py
app/common/: __init__.py  common_routes.py
app/middlewares/: __init__.py  blueprint.py  logger.py
tests/: app_test.py  conftest.py
