[tool.poetry]
name = "Simple - Sistema de Gestão"
version = "0.0.0"
description = "Sistema de Gestão simples e moderno."
authors = ["Lucas Cantarelli <lucascantarelli@gmail.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.2"
flask-toastr = "^0.5.8"
gunicorn = "^20.1.0"
flask-wtf = "^1.0.1"
faker = "^15.3.1"
flask-session = "^0.4.0"
poetry = "^1.3.2"
structlog = "^22.3.0"
structlog-extensions-nralbers = "^1.0.4"


[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
pytest-cov = "^4.0.0"
blue = "0.5.2"
flake8 = "^5.0.4"
flake8-debugger = "^4.1.2"
flake8-pytest-style = "^1.6.0"
isort = "^5.10.1"
mypy = "^0.982"
pep8-naming = "^0.13.2"
pyupgrade = "^3.1.0"
bandit = "^1.7.4"
pip-audit = "^2.4.4"
autopep8 = "^1.7.0"

[tool.isort]
profile = "black"
line_length = 100

[tool.blue]
line-length = 100

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
reportGeneralTypeIssues = false
